# cursed-apple-stats

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api-go/: go.mod
apps/api-go/cmd/api/: main.go
apps/api-go/internal/config/: config.go
apps/api-go/internal/deadlock/: client.go
apps/api-go/internal/server/: server.go
apps/api-go/internal/store/: store.go
apps/api-go/internal/syncer/: syncer.go
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  sync-button.tsx
apps/worker-rust/: Cargo.toml
apps/worker-rust/src/: main.rs
db/migrations/: 0001_init.sql
docs/: architecture.md  deadlock-schema-check.md  mvp-routes.md
